Create Random Snail Position

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="title_activity_start_hunt">StartHunt</string>
 
     <string name="explanation">
-        The assassin snail will be coming for you at all times.
+        The Snail Assassin will be coming for you at all times.
         How long can you last?
     </string>
     <string name="startButton">Be Hunted!</string>
